--- a/apps/docs-app/src/css/custom.css
+++ b/apps/docs-app/src/css/custom.css
@@ -6,25 +6,27 @@
 
 /* You can override the default Infima variables here. */
 :root {
-  --ifm-color-primary: #2e8555;
-  --ifm-color-primary-dark: #29784c;
-  --ifm-color-primary-darker: #277148;
-  --ifm-color-primary-darkest: #205d3b;
-  --ifm-color-primary-light: #33925d;
-  --ifm-color-primary-lighter: #359962;
-  --ifm-color-primary-lightest: #3cad6e;
+  --ifm-color-primary: #c30f2e;
+  --ifm-color-primary-dark: #b00d29;
+  --ifm-color-primary-darker: #a60d27;
+  --ifm-color-primary-darkest: #890a20;
+  --ifm-color-primary-light: #d61033;
+  --ifm-color-primary-lighter: #e01135;
+  --ifm-color-primary-lightest: #ee2346;
+  --ifm-background-color: #fefefe;
   --ifm-code-font-size: 95%;
   --docusaurus-highlighted-code-line-bg: rgba(0, 0, 0, 0.1);
 }
 
 /* For readability concerns, you should choose a lighter palette in dark mode. */
 [data-theme='dark'] {
-  --ifm-color-primary: #25c2a0;
-  --ifm-color-primary-dark: #21af90;
-  --ifm-color-primary-darker: #1fa588;
-  --ifm-color-primary-darkest: #1a8870;
-  --ifm-color-primary-light: #29d5b0;
-  --ifm-color-primary-lighter: #32d8b4;
-  --ifm-color-primary-lightest: #4fddbf;
+  --ifm-color-primary: #fc2753;
+  --ifm-color-primary-dark: #fc0a3c;
+  --ifm-color-primary-darker: #f40335;
+  --ifm-color-primary-darkest: #c9032c;
+  --ifm-color-primary-light: #fc446a;
+  --ifm-color-primary-lighter: #fd5275;
+  --ifm-color-primary-lightest: #fd7d98;
+  --ifm-background-color: #0d0e11;
   --docusaurus-highlighted-code-line-bg: rgba(0, 0, 0, 0.3);
 }
