docs: add StackBlitz button to home page

--- a/apps/docs-app/src/pages/index.module.css
+++ b/apps/docs-app/src/pages/index.module.css
@@ -21,3 +21,7 @@
   align-items: center;
   justify-content: center;
 }
+
+.buttonOutline:not(:hover) {
+  color: var(--ifm-hero-text-color) !important;
+}
