docs: shrink footer logo

--- a/apps/docs-app/src/css/custom.css
+++ b/apps/docs-app/src/css/custom.css
@@ -30,3 +30,8 @@
   --ifm-background-color: #0d0e11;
   --docusaurus-highlighted-code-line-bg: rgba(0, 0, 0, 0.3);
 }
+
+.footer__logo {
+  width: 100px;
+  height: 100px;
+}
