apply full width for buttons on mobile

--- a/apps/docs-app/src/pages/index.module.css
+++ b/apps/docs-app/src/pages/index.module.css
@@ -21,6 +21,15 @@
   align-items: center;
   justify-content: center;
   flex-wrap: wrap;
+  gap: 1rem;
+}
+
+@media screen and (max-width: 576px) { 
+  .buttons a {
+    flex: 1;
+    display: flex;
+    justify-content: center;
+  }
 }
 
 /**
