fix(vite-plugin-angular): skip transforming inline scripts
Closes #95

--- a/apps/astro-app/src/pages/index.astro
+++ b/apps/astro-app/src/pages/index.astro
@@ -108,3 +108,7 @@ const serverSideTitle = 'Angular (server side binding)';
 		padding: 0;
 	}
 </style>
+
+<script>
+	console.log('Hello Astro');
+</script>
