chore: add React component to astro-app to ensure compatibility

--- a/apps/astro-app/src/pages/index.astro
+++ b/apps/astro-app/src/pages/index.astro
@@ -2,6 +2,7 @@
 import Layout from '../layouts/Layout.astro';
 import Card from '../components/Card.astro';
 import { CardComponent } from '../components/card.component.ts';
+import { Instructions } from '../components/Instructions';
 
 const serverSideTitle = 'Angular (server side binding)';
 ---
@@ -9,10 +10,7 @@ const serverSideTitle = 'Angular (server side binding)';
 <Layout title="Welcome to Astro.">
 	<main>
 		<h1>Welcome to <span class="text-gradient">Astro</span></h1>
-		<p class="instructions">
-			Check out the <code>src/pages</code> directory to get started.<br />
-			<strong>Code Challenge:</strong> Tweak the "Welcome to Astro" message above.
-		</p>
+		<Instructions />
 		<ul role="list" class="link-card-grid">
 			<Card
 				href="https://docs.astro.build/"
