--- a/apps/docs-app/src/pages/index.module.css
+++ b/apps/docs-app/src/pages/index.module.css
@@ -8,6 +8,12 @@
   text-align: center;
   position: relative;
   overflow: hidden;
+  background-color: var(--ifm-color-primary);
+  color: var(--ifm-color-white);
+}
+
+:root[data-theme='dark'] .heroBanner {
+  background: linear-gradient(#2938584d, #131f374d);
 }
 
 @media screen and (max-width: 996px) {
@@ -24,7 +30,7 @@
   gap: var(--ifm-global-spacing);
 }
 
-@media screen and (max-width: 576px) { 
+@media screen and (max-width: 576px) {
   .buttons a {
     flex: 1;
     display: flex;
@@ -32,9 +38,14 @@
   }
 }
 
-/**
-  * 1. Increase specificity to override the Infima Outline Button style.
-  */
-.buttonOutline.buttonOutline.buttonOutline.buttonOutline:not(:hover) /* [1] */ {
-  color: var(--ifm-hero-text-color);
+:root[data-theme='dark'] .readDocsButton {
+  color: var(--ifm-color-white);
+  background-color: var(--angular-shield-color);
+  border-color: var(--angular-shield-color);
+}
+
+:root[data-theme='dark'] .readDocsButton:hover {
+  color: var(--ifm-color-secondary);
+  background-color: var(--angular-shield-color-dark);
+  border-color: var(--angular-shield-color-dark);
 }
