feat(astro-angular): add support for render and client component providers
Closes #97

--- a/apps/astro-app/src/pages/index.astro
+++ b/apps/astro-app/src/pages/index.astro
@@ -3,6 +3,7 @@ import Layout from '../layouts/Layout.astro';
 import Card from '../components/Card.astro';
 import { CardComponent } from '../components/card.component.ts';
 import { Instructions } from '../components/Instructions';
+import { TodosComponent } from '../components/todos.component.ts';
 
 const serverSideTitle = 'Angular (server side binding)';
 ---
@@ -45,6 +46,8 @@ const serverSideTitle = 'Angular (server side binding)';
       />
 		</ul>
 	</main>
+
+	<TodosComponent />
 </Layout>
 
 <style>
