feat(astro-angular): implement output forwarding on client-side hydrated components

--- a/apps/astro-app/src/pages/index.astro
+++ b/apps/astro-app/src/pages/index.astro
@@ -35,6 +35,7 @@ const serverSideTitle = 'Angular (server side binding)';
 			/>
 			<CardComponent
         client:visible
+        data-analog-id="card-1"
         href="https://angular.io/"
         title="Angular (Client Side)"
         body="Build with Angular. ❤️"
@@ -111,5 +112,10 @@ const serverSideTitle = 'Angular (server side binding)';
 </style>
 
 <script>
-	console.log('Hello Astro');
+  import { addAnalogOutputListener } from '@analogjs/astro-angular/utils';
+  console.log('Hello Astro');
+
+  addAnalogOutputListener('card-1', 'output', (event) => {
+    console.log('event received from card-1:', event.detail);
+  });
 </script>
