docs: update link to point new angular.dev site

--- a/apps/astro-app/src/pages/index.astro
+++ b/apps/astro-app/src/pages/index.astro
@@ -36,12 +36,12 @@ const serverSideTitle = 'Angular (server side binding)';
 			<CardComponent
         client:visible
         data-analog-id="card-component-1"
-        href="https://angular.io/"
+        href="https://angular.dev/"
         title="Angular (Client Side)"
         body="Build with Angular. ❤️"
       />
       <CardComponent
-        href="https://angular.io/"
+        href="https://angular.dev/"
         title={serverSideTitle}
         body="Build with Angular. ❤️"
       />
