refactor: update to new Angular v19 features (#1603)

--- a/apps/analog-app/src/app/pages/shipping/shipping.html
+++ b/apps/analog-app/src/app/pages/shipping/shipping.html
@@ -1,6 +1,7 @@
 <h3>Shipping Prices</h3>
-
-<div class="shipping-item" *ngFor="let shipping of shippingCosts | async">
+@for (shipping of shippingCosts | async; track $index) {
+<div class="shipping-item">
   <span>{{ shipping.type }}</span>
   <span>{{ shipping.price | currency }}</span>
 </div>
+}
