feat(create-analog): migrated initializer to tailwind v4

--- a/packages/create-analog/files/styles.css
+++ b/packages/create-analog/files/styles.css
@@ -1,7 +1,4 @@
-/* Tailwind directives  */
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
+@import 'tailwindcss';
 
 /* You can add global styles to this file, and also import other style files */
 :root {
